# lll

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
trainlocationeventsource/: Dockerfile  README.md  build.sh  pyproject.toml  run.sh
trainlocationeventsource/tests/: fakerepository.py  fakeunitofwork.py  test_handle_nstreinpositie.py  test_nstreinpositie.py
trainlocationeventsource/tests/nstreinpositiedata/: dual_treindeel.xml  empty_message.xml  multiple_messages.xml  single_message.xml
trainlocationeventsource/trainlocationeventsource/: __main__.py  nstreinpositie.py
trainlocationeventsource/trainlocationeventsource/adapters/: repository.py
trainlocationeventsource/trainlocationeventsource/domain/: __init__.py  nstreinpositie.py
trainlocationeventsource/trainlocationeventsource/entrypoints/: fastapi_app.py  ndovloket.py  replay_xml.py
trainlocationeventsource/trainlocationeventsource/service_layer/: services.py  unit_of_work.py
